@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 		package="ru.wapstart.plus1.sdk"
-		android:versionCode="15"
-		android:versionName="2.2.4">
+		android:versionCode="16"
+		android:versionName="2.3.0">
 	<uses-sdk android:minSdkVersion="7"/>
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
